// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no label switch is checked 1`] = `
<label
  className="pf-c-switch"
  htmlFor="no-label-switch-is-checked"
>
  <input
    aria-label=""
    checked={true}
    className="pf-c-switch__input"
    disabled={false}
    id="no-label-switch-is-checked"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="pf-c-switch__toggle"
  >
    <div
      aria-hidden="true"
      className="pf-c-switch__toggle-icon"
    >
      <CheckIcon
        color="currentColor"
        noVerticalAlign={true}
        size="sm"
        title={null}
      />
    </div>
  </span>
</label>
`;

exports[`no label switch is not checked 1`] = `
<label
  className="pf-c-switch"
  htmlFor="no-label-switch-is-not-checked"
>
  <input
    aria-label=""
    checked={false}
    className="pf-c-switch__input"
    disabled={false}
    id="no-label-switch-is-not-checked"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="pf-c-switch__toggle"
  >
    <div
      aria-hidden="true"
      className="pf-c-switch__toggle-icon"
    >
      <CheckIcon
        color="currentColor"
        noVerticalAlign={true}
        size="sm"
        title={null}
      />
    </div>
  </span>
</label>
`;

exports[`switch is checked 1`] = `
<label
  className="pf-c-switch"
  htmlFor="switch-is-checked"
>
  <input
    aria-label=""
    checked={true}
    className="pf-c-switch__input"
    disabled={false}
    id="switch-is-checked"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="pf-c-switch__toggle"
  />
  <span
    aria-hidden="true"
    className="pf-c-switch__label pf-m-on"
  >
    On
  </span>
  <span
    aria-hidden="true"
    className="pf-c-switch__label pf-m-off"
  >
    On
  </span>
</label>
`;

exports[`switch is checked and disabled 1`] = `
<label
  className="pf-c-switch"
  htmlFor="switch-is-checked-and-disabled"
>
  <input
    aria-label=""
    checked={true}
    className="pf-c-switch__input"
    disabled={true}
    id="switch-is-checked-and-disabled"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="pf-c-switch__toggle"
  >
    <div
      aria-hidden="true"
      className="pf-c-switch__toggle-icon"
    >
      <CheckIcon
        color="currentColor"
        noVerticalAlign={true}
        size="sm"
        title={null}
      />
    </div>
  </span>
</label>
`;

exports[`switch is not checked 1`] = `
<label
  className="pf-c-switch"
  htmlFor="switch-is-not-checked"
>
  <input
    aria-label=""
    checked={false}
    className="pf-c-switch__input"
    disabled={false}
    id="switch-is-not-checked"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="pf-c-switch__toggle"
  />
  <span
    aria-hidden="true"
    className="pf-c-switch__label pf-m-on"
  >
    Off
  </span>
  <span
    aria-hidden="true"
    className="pf-c-switch__label pf-m-off"
  >
    Off
  </span>
</label>
`;

exports[`switch is not checked and disabled 1`] = `
<label
  className="pf-c-switch"
  htmlFor="switch-is-not-checked-and-disabled"
>
  <input
    aria-label=""
    checked={false}
    className="pf-c-switch__input"
    disabled={true}
    id="switch-is-not-checked-and-disabled"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="pf-c-switch__toggle"
  >
    <div
      aria-hidden="true"
      className="pf-c-switch__toggle-icon"
    >
      <CheckIcon
        color="currentColor"
        noVerticalAlign={true}
        size="sm"
        title={null}
      />
    </div>
  </span>
</label>
`;
